# kily

./: Git.md  README.md
Cboard/TFT_demo/TFT_demo/: .mxproject  TFT_demo.ioc
Code/8.USART_receive_and_send/8.USART_receive_and_send/: .mxproject  usart.ioc
Code/F103C8T6/: 003.ioc
Code/F103C8T6/MDK-ARM/: 003.uvguix.smith  003.uvoptx  003.uvprojx  JLinkLog.txt  startup_stm32f103xb.lst
Code/H750VBT6/03-LCD_Test/: .mxproject  03-LCD_Test.ioc  123456.c
Code/H750VBT6/LCD_Demo/: .mxproject  LCD_Demo.ioc
Code/MAS-ROBO/C/: .mxproject  C-Board.ioc
Code/MAS-ROBO/C-board/: .mxproject  C-Board.ioc  common.ftl  tpye_c.ioc
Code/MAS-ROBO/C1/: .mxproject  (+1 more)
Code/STM32F103C8T6_TFT_DEMO/: .cproject  .mxproject  stm32f103c8t6_lcd_test.ioc
Code/stm32f103c8t6_lcd_test/: .mxproject  .project
STM32F103C8T6_TFT_DEMO/: .mxproject  .project  stm32f103c8t6_lcd_test Debug.launch
STM32F103C8T6_TFT_DEMO/Debug/: objects.list  sources.mk  stm32f103c8t6_lcd_test.elf
kily_product/Power Control Board/: readme.md
mi_motor/资料/: open_can.sh  open_vscan.sh  readme.md
mi_motor/资料/MyMotorTool/: CMakeLists.txt  readme.md
mi_motor/资料/MyMotorTool/src/: MyMotorTool.cpp  MyMotorTool.h  MyMotorTool.ui  main.cpp  math_ops.cpp  math_ops.h
mi_motor/资料/cybermotor_ctrl/: CMakeLists.txt  readme.md
mi_motor/资料/cybermotor_ctrl/generate_cmd/: generate_cmd.cpp
mi_motor/资料/cybermotor_ctrl/src/: cybermotor_ctrl.cpp  cybermotor_ctrl.h  main.cpp  math_ops.cpp
stm32f103c8t6_lcd_test/: .cproject  .mxproject  stm32f103c8t6_lcd_test.ioc
stm32f103c8t6_lcd_test/Debug/: makefile  objects.list
(+1937 files in other folders)
